--- a/league-frontend/index.html
+++ b/league-frontend/index.html
@@ -7,7 +7,7 @@
 		<meta name="color-scheme" content="light dark" />
 		<title>Vite + Preact</title>
 	</head>
-	<body class="h-screen bg-orange-999">
+	<body class="overflow-x-hidden overflow-y-hidden max-h-screen bg-orange-999">
 		<div id="app"></div>
 		<script prerender type="module" src="/src/index.tsx"></script>
 	</body>
